# playing_with_cpp

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt
array_and_vector/: CMakeLists.txt
array_and_vector/include/: utils.h
array_and_vector/src/: main.cpp  utils.cpp
char_and_strings/: CMakeLists.txt
char_and_strings/src/: main.cpp
count_words/: CMakeLists.txt
count_words/src/: main.cpp
playlist/: CMakeLists.txt  main.cpp
playlist/include/: Playlist.h  Song.h  playlist.h  song.h
playlist/src/: Playlist.cpp  main.cpp  playlist.cpp
playlist/test/: main.cpp  test_playlist.h
student_score/: CMakeLists.txt
student_score/resources/: responses.txt
student_score/src/: main.cpp
